# ms051uh

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
src/health_dashboard/: __init__.py  config.py
src/health_dashboard/alignment/: __init__.py  hr_sleep_join.py  night_grouping.py  resampling.py
src/health_dashboard/analytics/: __init__.py  dipping.py  nightly_metrics.py  rolling_baseline.py  sleep_duration.py  stage_stats.py  stress_flag.py
src/health_dashboard/ingestion/: __init__.py  anonymizer.py  csv_parser.py  exporter.py  stage_mapping.py  validator.py  xml_parser.py
src/health_dashboard/ui/: __init__.py  drill_down.py  file_upload.py  file_upload_v2.py  info_cards.py  kpi_cards.py  messages.py  privacy_notice.py  science_panel.py  sidebar.py  theme.py
src/health_dashboard/ui/charts/: __init__.py  combined_view.py  dipping_chart.py  hr_trend.py  rolling_baseline.py  sleep_timeline.py  stage_stats_table.py
tests/: __init__.py  conftest.py
tests/data/: demo_heartrate.csv  demo_sleep.csv  export.xml  heart_rate_sample.csv  sleep_sample.csv  synthetic_large.csv  synthetic_stress_hr.csv  synthetic_stress_sleep.csv
tests/integration/: test_end_to_end.py
tests/unit/: test_csv_parser.py  test_hr_sleep_join.py  test_night_grouping.py  test_oom_guard.py  test_resampling.py  test_stage_mapping.py  test_validator.py
